# MEV-Bot-Detector-Backend

./: .gitignore  README.md  check_files.js  check_wasm.js  docker-compose.yml  index.js  jwtsecret  load-test.js  package-lock.json  package.json
geth-data/geth/: nodekey
geth-data/geth/chaindata/: 000020.sst  MANIFEST-000013  MANIFEST-000018  OPTIONS-000019
geth-data/geth/nodes/: 000013.ldb  000016.ldb  LOG  MANIFEST-000015
ipfs-data/: config
ipfs-data/blocks/: diskUsage.cache
ipfs-data/datastore/: 000002.ldb  LOG  MANIFEST-000004
mev-subgraph/: package-lock.json  package.json  schema.graphql  subgraph.yaml
mev-subgraph/src/: mapping.ts
mev_engine/: Cargo.toml
mev_engine/pkg/: mev_engine.d.ts  mev_engine.js  mev_engine_bg.wasm  mev_engine_bg.wasm.d.ts  package.json
mev_engine/src/: lib.rs
postgres-data/base/13755/: 2619
postgres-data/base/13756/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: global.stat
redis-data/: dump.rdb
redis-data/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
